# tee-talk

./: .gitignore  Cargo.toml  DEVLOG.md  Dockerfile.build  README.md  VERIFICATION.toml  VERIFY.md  readings.txt.gpg  system-prompt.txt
.github/workflows/: build.yml  release.yml
deploy/: deploy-verified.sh  deploy.sh  startup.sh
scripts/: build-image.sh  build.sh  extract-ddj.py  tag-notes.py  upload-image.sh
site/: index.html  privacy.html  sms.html  terms.html
src/: attestation.rs  certs.rs  client.rs  main.rs  messages.rs  noise.rs  sms.rs  tee.rs  web.rs
